<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:id="@+id/nav_manage_templates_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage_templates"

            android:title="@string/menu_manage_templates" />
    </group>
<!--    android:icon="@drawable/manage_template"-->
    <group android:id="@+id/nav_create_invoice_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_invoice"
            android:title="@string/menu_create_invoice" />
    </group>
<!--    android:icon="@drawable/create_invoice"-->
    <group android:id="@+id/nav_reports_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reports"
            android:title="@string/menu_reports" />
</group>
<!--    android:icon="@drawable/report"-->
    <group android:id="@+id/nav_logout_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>
<!--    android:icon="@drawable/ic_baseline_logout_24"-->
</menu>